--- a/index.html
+++ b/index.html
@@ -2,14 +2,40 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Appfect</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+  <body style="background: url(img/bc-gr.png) no-repeat center center;">
+    <h1>Appfect</h1>
+    <section class="pedals">
+      <div id="delayPedal" class="delayPedal">
+        <h2>Delay</h2>
+        <label for="delayTimer">Delay Time</label></br>
+        <input id="delayTimer" type="range" name="delayTimer" min="0" max="1" step="0.1"></br>
+        <label for="delayFeedback">Feedback</label></br>
+        <input id="delayFeedback" type="range" name="delayFeedback" min="0" max="1" step="0.1"></br>
+        <label for="delayVolume">Volume</label></br>
+        <input id="delayVolume" type="range" name="delayVolume" min="0" max="1" step="0.1"></br>
+        <button id="delay" class="off">W</button>
+      </div>
+      <div id="reverbPedal" class="reverbPedal">
+        <h2>Reverb</h2>
+        <label for="reverbVolume">Volume</label></br>
+        <input id="reverbVolume" type="range" name="reverbVolume" min="0" max="1" step="0.1"></br>
+        <button id="reverb" class="off">Y</button>
+      </div>
+      <div id="distortionPedal" class="distortionPedal">
+        <h2>Distortion</h2>
+        <label for="distortionCurve">Curve</label></br>
+        <input id="distortionCurve" type="range" name="distortionCurve" min="0" max="800"></br>
+        <label for="distortionVolume">Volume</label></br>
+        <input id="distortionVolume" type="range" name="distortionVolume" min="0" max="1" step="0.1"></br>
+        <button id="distortion" class="off">P</button>
+      </div>
+    </section>
+    <section class="otherBtns">
+      <button id="padBtn" type="button" name="padBtn">Oscillator Pad</button>
+    </section>
   </body>
 
   <script>
